24.jun (ws)
      - refuse to open incompatible score files (file version number > current
        versione number); this adds new translatable strings
21.jun (ws)
      - fix dragging from palette of measure repeat symbol
20.jun (db)
      - remove incompatible "temperament tuning" plugin
18.jun (la)
      - fix #5949 : MIDI import gives unexpectedly silent notes
      - fix #6144 : Notes (and other signs) in small staves are smaller than they should
17.jun (la)
      - fix #6134 : Fingering text offset does not save units and alignment
15.jun (la)
      - fix #6060 for composed locale names
      - fix #6114 : SVG graphics disappear after reload
12.jun (la)
      - fix #6072 : Crash when adding note to wrong percussion staff
      - patch by Aaron Epstein for #5923 : Transpose chordnames does not preserve pitch spelling
      - fix #6060 : Help > Local Handbook doesn't work on windows
10.jun (la)
      - add files for Basque translation
      - fix #6049 : 0.9.5 file with breve or longa cannot be opened with MuseScore 0.9.6
9.jun (la)
      - update qt_cs.ts
4.jun (ws)
      - hide inspector in production build
      - fix #5957: Play/Don't play repeat dies not have immediate effect
3.jun (ws)
      - changed behaviour of measure->add(Segment*) which fixes
        #5932 overture file import error
2.jun (ws)
      - fix crash #5917 by range checking tpc values
      - fix #5939: Volta hook length doesn't get saved in file
      - fix #5903: Increasing actual measure lenght does not
        correctly "shift" following measures
29.may (ws)
      - Do not update inspector if not visible. This prohibits the
        performance decrease after using the inspector.
27.may (la)
      - fix #5897: > and < are not read back from saved score
26.may (ws)
      - fix #5867: End Repeat disappears when creating multimeasure rests
24.may (ws)
      - fix remove segment
23.may (ws)
      - fix custom page size for printing and pdf output